# onboarding-flow

./: Dockerfile  Dockerfile.debug  README.md  pyproject.toml
compose/: docker-compose.debug.yml  docker-compose.yml
src/: alembic.ini
src/cli/: fixtures.py  run_flow.py
src/database/: data_model.py  meta.py
src/migrations/: env.py
src/migrations/versions/: 7691b6a04446_initial_schema.py
src/server/: config.py  database_handler.py  main.py
src/server/core/: gates.py  registry.py  rules.py  steps.py
src/server/crud/: application.py  decision.py  integration.py  step.py
src/server/models/: api.py  base_businesses.py  base_individuals.py  common.py  country_business_stub.py  country_private_stub.py  sweden_business.py  sweden_private.py
src/server/routes/: applications.py  generic.py
src/server/services/: integration_strategy.py  orchestrator.py
src/server/services/integrations/: bank_account.py  base.py  credit.py  identity.py  registry.py  sanctions.py
tests/: test_decisioning.py  test_flow_engine.py
